[package]
name = "deoptloader"
version = "1.0.0"
authors = ["Colin Snover <github.com@zetafleet.com>"]
edition = "2018"
license = "Apache-2.0"
default-run = "deoptloader"

[dependencies]
bitflags = "1"
byteorder = "1"
custom_error = "1"
encoding = "0.2"
enum_primitive = "0.1"
nom = "4"
num = "0.2"
safemem = "0.3"
